log
Thu 14 Sep 2023 05:24:51 PM UTC: 
 tests:  1|8
total_score: 0/70
60e974c
Thu 14 Sep 2023 05:41:45 PM UTC: 
 treemap.c | 57 +++++++++++++++++++++------------------------------------
 1 file changed, 21 insertions(+), 36 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:44:3: error: ‘new’ undeclared (first use in this function)
   44 |   new->lower_than = lower_than;
      |   ^~~
treemap.c:44:3: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
   47 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2165d08
Thu 14 Sep 2023 07:37:14 PM UTC: 
 treemap.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
af6c518
Thu 14 Sep 2023 07:50:01 PM UTC: 
 treemap.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:74:20: error: initialization of ‘int’ from ‘int (*)(void *, void *)’ makes integer from pointer without a cast [-Werror=int-conversion]
   74 |     int comparar = tree -> lower_than;
      |                    ^~~~
cc1: all warnings being treated as errors
Compilation failed
1acdd51
Thu 14 Sep 2023 07:51:07 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
885844f
Thu 14 Sep 2023 07:56:39 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
614fe29
